// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderMarkdown > renders a detail frame 1`] = `
"# Lift Manifest — demo/detail-frame

> Generated by Arcade Studio. Schema version 1. Frame on disk: \`/abs/detail-frame.tsx\`

## Intent
Ticket detail with tabs.

## Frame inventory
| Studio import | Production equivalent | Class | Notes |
| --- | --- | --- | --- |
| \`AppShell\` from \`arcade-prototypes\` | \`Page\` from \`@devrev-web/design-system/shared/raw-design-system\` | structural | see composite mapping details |
| \`BreadcrumbBar\` from \`arcade-prototypes\` | \`Breadcrumbs\` from \`@devrev-web/design-system/shared/raw-design-system\` | mechanical | — |
| \`PageBody\` from \`arcade-prototypes\` | \`Page.Content\` from \`@devrev-web/design-system/shared/raw-design-system\` | mechanical | — |
| \`TitleBar\` from \`arcade-prototypes\` | \`Page.Header\` from \`@devrev-web/design-system/shared/raw-design-system\` | structural | see composite mapping details |
| \`Button\` from \`arcade\` | \`Button\` from \`@devrev-web/design-system/shared/raw-design-system\` | mechanical | prop \`size\`: md→M, lg→L; Studio narrows to md\\|lg; production accepts S\\|M\\|L. A Studio frame never uses sm.; prop \`variant\`: primary→primary, secondary→secondary, tertiary→tertiary, destructive→destructive; Children are identical. Leading/trailing icons move from raw children to \`start\` / \`end\` slots in production. |
| \`Tabs\` from \`arcade\` | \`TabList\` from \`@devrev-web/design-system/shared/raw-design-system\` | mechanical | prop \`onChange\`→\`onValueChange\`; Production names the component TabList; subcomponent shape is similar. |

## Composite mapping details
### AppShell → Page
- AppShell wraps the whole app in a sidebar+content flex layout. In devrev-web, features compose this inline: \`<div className="flex h-screen"><aside>{sidebar}</aside><div className="flex-1">{children}</div></div>\` alongside <Page>. There is no single-component equivalent. Unroll into inline flex + Page.

### BreadcrumbBar → Breadcrumbs
- _(no structural notes.)_

### PageBody → Page.Content
- _(no structural notes.)_

### TitleBar → Page.Header
- Production pages use Page.Header for the top bar; traffic-lights/window-chrome elements from Studio's TitleBar do not exist in production (they are Studio's own chrome).

## Tokens
Tokens are aligned between arcade-gen and arcade-theme. CSS custom property names carry across. No token remap is required.

## Production scaffolding (detail)
These are the things a Studio frame never covers by itself. Engineer + agent divide between them.

- [ ] Data-layer hook (useDL<Entity> query) — \`libs/<domain>/shared/data-layer/src/use-<entity>.ts\`
- [ ] Adapter (API response → UI shape) — \`libs/<domain>/adapters/src/<entity>.ts\`
- [ ] Query keys entry — \`libs/<domain>/shared/data-layer/src/keys.ts\`
- [ ] Stale time entry — \`STALE_TIMES_IN_MS.<ENTITY>\`
- [ ] Route registration — \`apps/product/dr-router.tsx + libs/micro-apps/main/src/...\`
- [ ] Feature flag gate (useFeatureFlag)
- [ ] Event tracker wiring (useEventTracker + track)

## Grounding
- Figma: https://figma.com/file/xyz
- Screenshot: /api/projects/demo/thumbnails/detail-frame.png

## Agent handoff
Paste the block below into a Claude Code session opened in the \`devrev-web\` checkout:

\`\`\`text
I'm lifting an Arcade Studio frame into devrev-web. Apply MECHANICAL rewrites directly. For STRUCTURAL rewrites, write the new production shape and leave brief comments explaining what changed. For JUDGMENT entries, leave a // TODO: comment with the judgment note and ask me before deciding. Do NOT invent production equivalents for unmapped imports — surface them.

Manifest follows.

---
Project/frame: demo/detail-frame
Shape: detail
Frame source on disk (Studio user's machine): /abs/detail-frame.tsx
\`\`\`
"
`;

exports[`renderMarkdown > renders a list-view frame 1`] = `
"# Lift Manifest — demo/list-frame

> Generated by Arcade Studio. Schema version 1. Frame on disk: \`/abs/list-frame.tsx\`

## Intent
List of tickets with filters and pagination.

## Frame inventory
| Studio import | Production equivalent | Class | Notes |
| --- | --- | --- | --- |
| \`VistaFilterPill\` from \`arcade-prototypes\` | \`Chip\` from \`@devrev-web/design-system/shared/raw-design-system\` | structural | see composite mapping details |
| \`VistaPage\` from \`arcade-prototypes\` | \`ListViewPage\` from \`@devrev-web/shared/part-work-components\` | structural | see composite mapping details |
| \`VistaPagination\` from \`arcade-prototypes\` | \`Pagination\` from \`@devrev-web/design-system/shared/raw-design-system\` | mechanical | — |
| \`Button\` from \`arcade\` | \`Button\` from \`@devrev-web/design-system/shared/raw-design-system\` | mechanical | prop \`size\`: md→M, lg→L; Studio narrows to md\\|lg; production accepts S\\|M\\|L. A Studio frame never uses sm.; prop \`variant\`: primary→primary, secondary→secondary, tertiary→tertiary, destructive→destructive; Children are identical. Leading/trailing icons move from raw children to \`start\` / \`end\` slots in production. |
| \`Input\` from \`arcade\` | \`TextInput\` from \`@devrev-web/design-system/shared/raw-design-system\` | structural | prop \`disabled\`→\`modifiers\`; Production moves disabled/readOnly into a \`modifiers\` prop object: modifiers={{ disabled: true }}.; Studio exposes \`start\` / \`end\` as children-like nodes. Production uses explicit \`start\` / \`end\` slot props. |

## Composite mapping details
### VistaFilterPill → Chip
- Production uses Chip with a close-button slot; Studio's VistaFilterPill bundles behaviour into one component.

### VistaPage → ListViewPage
- VistaPage composes AppShell + VistaHeader + VistaToolbar + content. Production wraps these behaviours in ListViewPage: pass tableProps, filterProps, headerProps.
- The \`primaryAction\`, \`count\`, \`toolbarIcons\`, \`filters\` slots from VistaPage map onto headerProps.actions, headerProps.count, toolbarProps.actions, toolbarProps.filters respectively.

### VistaPagination → Pagination
- _(no structural notes.)_

## Tokens
Tokens are aligned between arcade-gen and arcade-theme. CSS custom property names carry across. No token remap is required.

## Production scaffolding (list-view)
These are the things a Studio frame never covers by itself. Engineer + agent divide between them.

- [ ] Data-layer hook (useDL<Entity>s list query) — \`libs/<domain>/shared/data-layer/src/use-<entity>s.ts\`
- [ ] Adapter (API list response → UI shape) — \`libs/<domain>/adapters/src/<entity>-list.ts\`
- [ ] Query keys entry — \`libs/<domain>/shared/data-layer/src/keys.ts\`
- [ ] Stale time entry — \`STALE_TIMES_IN_MS.<ENTITY>\`
- [ ] Route registration — \`apps/product/dr-router.tsx + libs/micro-apps/main/src/...\`
- [ ] Feature flag gate (useFeatureFlag)
- [ ] Event tracker wiring (useEventTracker + track)

## Grounding
- Figma: https://figma.com/file/xyz
- Screenshot: /api/projects/demo/thumbnails/list-frame.png

## Agent handoff
Paste the block below into a Claude Code session opened in the \`devrev-web\` checkout:

\`\`\`text
I'm lifting an Arcade Studio frame into devrev-web. Apply MECHANICAL rewrites directly. For STRUCTURAL rewrites, write the new production shape and leave brief comments explaining what changed. For JUDGMENT entries, leave a // TODO: comment with the judgment note and ask me before deciding. Do NOT invent production equivalents for unmapped imports — surface them.

Manifest follows.

---
Project/frame: demo/list-frame
Shape: list-view
Frame source on disk (Studio user's machine): /abs/list-frame.tsx
\`\`\`
"
`;

exports[`renderMarkdown > renders a settings-form frame 1`] = `
"# Lift Manifest — demo/settings-frame

> Generated by Arcade Studio. Schema version 1. Frame on disk: \`/abs/settings-frame.tsx\`

## Intent
Profile settings form.

## Frame inventory
| Studio import | Production equivalent | Class | Notes |
| --- | --- | --- | --- |
| \`SettingsCard\` from \`arcade-prototypes\` | \`SettingsSection\` from \`@devrev-web/design-system/shared/settings\` | mechanical | see composite mapping details |
| \`SettingsPage\` from \`arcade-prototypes\` | \`SettingsPage\` from \`@devrev-web/design-system/shared/settings\` | mechanical | see composite mapping details |
| \`SettingsRow\` from \`arcade-prototypes\` | \`SettingsRow\` from \`@devrev-web/design-system/shared/settings\` | mechanical | — |
| \`Button\` from \`arcade\` | \`Button\` from \`@devrev-web/design-system/shared/raw-design-system\` | mechanical | prop \`size\`: md→M, lg→L; Studio narrows to md\\|lg; production accepts S\\|M\\|L. A Studio frame never uses sm.; prop \`variant\`: primary→primary, secondary→secondary, tertiary→tertiary, destructive→destructive; Children are identical. Leading/trailing icons move from raw children to \`start\` / \`end\` slots in production. |
| \`Input\` from \`arcade\` | \`TextInput\` from \`@devrev-web/design-system/shared/raw-design-system\` | structural | prop \`disabled\`→\`modifiers\`; Production moves disabled/readOnly into a \`modifiers\` prop object: modifiers={{ disabled: true }}.; Studio exposes \`start\` / \`end\` as children-like nodes. Production uses explicit \`start\` / \`end\` slot props. |

## Composite mapping details
### SettingsCard → SettingsSection
- Card heading + body → SettingsSection with \`title\` + children.

### SettingsPage → SettingsPage
- Production SettingsPage is the exact production template engineers use for settings routes. Near-mechanical at the page level.

### SettingsRow → SettingsRow
- _(no structural notes.)_

## Tokens
Tokens are aligned between arcade-gen and arcade-theme. CSS custom property names carry across. No token remap is required.

## Production scaffolding (settings-form)
These are the things a Studio frame never covers by itself. Engineer + agent divide between them.

- [ ] Data-layer hook (useDL<Entity> query) — \`libs/<domain>/shared/data-layer/src/use-<entity>.ts\`
- [ ] Data-layer hook (useDL<Entity> mutation) — \`libs/<domain>/shared/data-layer/src/use-update-<entity>.ts\`
- [ ] Adapter (API response → UI shape) — \`libs/<domain>/adapters/src/<entity>.ts\`
- [ ] Query keys entry — \`libs/<domain>/shared/data-layer/src/keys.ts\`
- [ ] Stale time entry — \`STALE_TIMES_IN_MS.<ENTITY>\`
- [ ] Form hook (validation + submission) — \`libs/<domain>/feature/<feature>/src/hooks/use-<feature>-form.ts\`
- [ ] Route registration — \`apps/product/dr-router.tsx + libs/micro-apps/main/src/...\`
- [ ] Feature flag gate (useFeatureFlag)
- [ ] Event tracker wiring (useEventTracker + track)

## Grounding
- Figma: https://figma.com/file/xyz
- Screenshot: /api/projects/demo/thumbnails/settings-frame.png

## Agent handoff
Paste the block below into a Claude Code session opened in the \`devrev-web\` checkout:

\`\`\`text
I'm lifting an Arcade Studio frame into devrev-web. Apply MECHANICAL rewrites directly. For STRUCTURAL rewrites, write the new production shape and leave brief comments explaining what changed. For JUDGMENT entries, leave a // TODO: comment with the judgment note and ask me before deciding. Do NOT invent production equivalents for unmapped imports — surface them.

Manifest follows.

---
Project/frame: demo/settings-frame
Shape: settings-form
Frame source on disk (Studio user's machine): /abs/settings-frame.tsx
\`\`\`
"
`;

exports[`renderMarkdown > renders an ad-hoc frame 1`] = `
"# Lift Manifest — demo/adhoc-frame

> Generated by Arcade Studio. Schema version 1. Frame on disk: \`/abs/adhoc-frame.tsx\`

## Intent
Confirmation modal.

## Frame inventory
| Studio import | Production equivalent | Class | Notes |
| --- | --- | --- | --- |
| \`Button\` from \`arcade\` | \`Button\` from \`@devrev-web/design-system/shared/raw-design-system\` | mechanical | prop \`size\`: md→M, lg→L; Studio narrows to md\\|lg; production accepts S\\|M\\|L. A Studio frame never uses sm.; prop \`variant\`: primary→primary, secondary→secondary, tertiary→tertiary, destructive→destructive; Children are identical. Leading/trailing icons move from raw children to \`start\` / \`end\` slots in production. |
| \`Modal\` from \`arcade\` | \`Modal\` from \`@devrev-web/design-system/shared/raw-design-system\` | mechanical | Both use compound subcomponents. Rename Modal.Root → Modal.Root, Modal.Content → Modal.Content, etc. API shape matches closely; mechanical. |

## Tokens
Tokens are aligned between arcade-gen and arcade-theme. CSS custom property names carry across. No token remap is required.

## Production scaffolding (ad-hoc)
These are the things a Studio frame never covers by itself. Engineer + agent divide between them.

- [ ] Consider whether this fits an existing Tier-2/3 template (PageLayout, ListViewPage, SettingsPage)
- [ ] Data-layer hook (useDL<Entity> query) — \`libs/<domain>/shared/data-layer/src/use-<entity>.ts\`
- [ ] Adapter (API response → UI shape) — \`libs/<domain>/adapters/src/<entity>.ts\`
- [ ] Query keys entry — \`libs/<domain>/shared/data-layer/src/keys.ts\`
- [ ] Stale time entry — \`STALE_TIMES_IN_MS.<ENTITY>\`
- [ ] Route registration — \`apps/product/dr-router.tsx + libs/micro-apps/main/src/...\`
- [ ] Feature flag gate (useFeatureFlag)
- [ ] Event tracker wiring (useEventTracker + track)

## Grounding
- Figma: https://figma.com/file/xyz
- Screenshot: /api/projects/demo/thumbnails/adhoc-frame.png

## Agent handoff
Paste the block below into a Claude Code session opened in the \`devrev-web\` checkout:

\`\`\`text
I'm lifting an Arcade Studio frame into devrev-web. Apply MECHANICAL rewrites directly. For STRUCTURAL rewrites, write the new production shape and leave brief comments explaining what changed. For JUDGMENT entries, leave a // TODO: comment with the judgment note and ask me before deciding. Do NOT invent production equivalents for unmapped imports — surface them.

Manifest follows.

---
Project/frame: demo/adhoc-frame
Shape: ad-hoc
Frame source on disk (Studio user's machine): /abs/adhoc-frame.tsx
\`\`\`
"
`;

exports[`renderMarkdown > skips n/a composites in the details section 1`] = `
"# Lift Manifest — demo/computer-frame

> Generated by Arcade Studio. Schema version 1. Frame on disk: \`/abs/computer-frame.tsx\`

## Intent
Computer app chrome.

## Frame inventory
| Studio import | Production equivalent | Class | Notes |
| --- | --- | --- | --- |
| \`ChatInput\` from \`arcade-prototypes\` | _no direct equivalent_ | judgment | Studio provides a chat-input composite. In devrev-web chat inputs live inside specific features (Support, Timeline) and are bespoke. Map against the host feature's input component. |
| \`ComputerHeader\` from \`arcade-prototypes\` | _no direct equivalent_ | judgment | ComputerHeader is Studio-specific UI (the 'Computer' app's own title bar). No production equivalent — drop when the frame is being lifted as a product feature, keep if lifting the whole Computer experience. |
| \`ComputerSidebar\` from \`arcade-prototypes\` | _no direct equivalent_ | judgment | Studio-specific UI (chat sidebar for the Computer app). Treat like ComputerHeader. |
| \`Button\` from \`arcade\` | \`Button\` from \`@devrev-web/design-system/shared/raw-design-system\` | mechanical | prop \`size\`: md→M, lg→L; Studio narrows to md\\|lg; production accepts S\\|M\\|L. A Studio frame never uses sm.; prop \`variant\`: primary→primary, secondary→secondary, tertiary→tertiary, destructive→destructive; Children are identical. Leading/trailing icons move from raw children to \`start\` / \`end\` slots in production. |

## Tokens
Tokens are aligned between arcade-gen and arcade-theme. CSS custom property names carry across. No token remap is required.

## Production scaffolding (ad-hoc)
These are the things a Studio frame never covers by itself. Engineer + agent divide between them.

- [ ] Consider whether this fits an existing Tier-2/3 template (PageLayout, ListViewPage, SettingsPage)
- [ ] Data-layer hook (useDL<Entity> query) — \`libs/<domain>/shared/data-layer/src/use-<entity>.ts\`
- [ ] Adapter (API response → UI shape) — \`libs/<domain>/adapters/src/<entity>.ts\`
- [ ] Query keys entry — \`libs/<domain>/shared/data-layer/src/keys.ts\`
- [ ] Stale time entry — \`STALE_TIMES_IN_MS.<ENTITY>\`
- [ ] Route registration — \`apps/product/dr-router.tsx + libs/micro-apps/main/src/...\`
- [ ] Feature flag gate (useFeatureFlag)
- [ ] Event tracker wiring (useEventTracker + track)

## Grounding
- Figma: https://figma.com/file/xyz
- Screenshot: /api/projects/demo/thumbnails/computer-frame.png

## Agent handoff
Paste the block below into a Claude Code session opened in the \`devrev-web\` checkout:

\`\`\`text
I'm lifting an Arcade Studio frame into devrev-web. Apply MECHANICAL rewrites directly. For STRUCTURAL rewrites, write the new production shape and leave brief comments explaining what changed. For JUDGMENT entries, leave a // TODO: comment with the judgment note and ask me before deciding. Do NOT invent production equivalents for unmapped imports — surface them.

Manifest follows.

---
Project/frame: demo/computer-frame
Shape: ad-hoc
Frame source on disk (Studio user's machine): /abs/computer-frame.tsx
\`\`\`
"
`;
